ECOSENT-881 - fix scrollbar style for all browsers

--- a/src/constants.scss
+++ b/src/constants.scss
@@ -110,8 +110,3 @@ $scroll-border-radius: 3px;
   text-overflow: ellipsis;
   overflow: hidden;
 }
-
-// the :export directive is the magic sauce for webpack
-:export {
-  scrollbarWidth: $scroll-size;
-}
